<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TassDroid</string>
    <string name="app_item_logout">Logout</string>
    <string name="app_item_refresh">Refresh</string>
    <string name="app_item_chart">Graphic Chart</string>
    <string name="app_item_edit">Edit</string>
    <string name="dialog_loading">Loading...</string>

    <!--error message-->
    <string name="login_page_alert_invalid">Invalid Login</string>
    <string name="login_page_alert_no_connection">Connection Unavailable</string>
    <string name="error_time_request">Internal server error</string>
    <string name="login_user_field">Username is required</string>
    <string name="login_pass_field">Password is required</string>

    <!--login activity string value-->
    <string name="login_page_button_login">Login</string>
    <string name="login_page_label_login">TassDroid</string>
    <string name="login_page_hint_username">Username</string>
    <string name="login_page_hint_password">Password</string>
    <string name="login_page_alert_valid">Login Success</string>
    <string name="login_page_dialog_signin">Authenticate..</string>
    <string name="login_page_kosong">Fields are required</string>

     <!--nav drawer menu items string values-->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Academic Calendar</item>
        <item>Financial Status</item>
        <item>TAK</item>
        <item>BAP Approval</item>
        <item>Change Password</item>
    </string-array>
    <!--nav drawer menu items icon values-->
    <string-array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_kalender</item>
        <item>@drawable/ic_keuangan</item>
        <item>@drawable/ic_tak</item>
        <item>@drawable/ic_bap</item>
        <item>@drawable/ic_password</item>
    </string-array>

    <!--fragment home-->
    <string name="mnBio">Bio</string>
    <string name="mnJadwalKuliah">Schedule</string>
    <string name="mnAbsen">Attendance</string>
    <string name="mnNilaiMentah">Raw Score</string>
    <string name="mnTugas">Tasks</string>
    <string name="mnPassword">Change Password</string>

    <!--list adapter keuangan-->
    <string name="adapter_keuangan_kuitansi">Receipt</string>
    <string name="adapter_keuangan_semester">SEMESTER</string>

    <!--fragment tak-->
    <string name="f_tak_label_bagian">SECTION:</string>
    <string name="f_tak_label_poin">POINT:</string>
    <string name="f_tak_label_total_poin">POINT TOTAL:</string>

    <!--activity detail nilai-->
    <string name="detail_nilai">Score Details</string>
    <string name="detail_semester">Semester</string>
    <string name="detail_kelas">Class</string>
    <string name="detail_kode_dosen">Lecture Code</string>
    <string name="detail_sks">SKS</string>
    <string name="detail_kajian">Assesment</string>
    <string name="detail_alpa">Absent</string>
    <string name="detail_nilai_kajian1">Assesment 1</string>
    <string name="detail_nilai_kajian2">Assesment 2</string>
    <string name="detail_nilai_kajian3">Assesment 3</string>
    <string name="detail_nilai_tugas">Task</string>
    <string name="detail_nilai_praktikum">Practicum</string>
    <string name="label_kosong">No data loaded</string>

    <!--activity tugas-->
    <string-array name="judul_tab_tugas">
        <item>Individual</item>
        <item>Group</item>
    </string-array>

    <!--fragment tugas individu-->
    <string name="tugas_label_tugas">Task Name</string>
    <string name="tugas_label_deadline">Deadline</string>
    <string name="tugas_label_waktu">Time</string>
    <string name="tugas_label_anggota">Member</string>
    <string name="tugas_label_keterangan">Description</string>

    <!--showcase-->
    <string name="showcase_menu_nav">RIGHT SWIPE FOR OTHER MENU</string>
    <string name="showcase_tugas_nav">RIGHT OR LEFT SWIPE TO SWITCH MENU</string>
    <string name="showcase_button_ok">I GOT IT !</string>
    <string name="showcase_item_pres">SELECT EACH ITEMS FOR MORE DETAILS</string>
    <string name="showcase_approve">HOLD EACH ITEMS TO APPROVE</string>

    <!--activity presensi absen-->
    <string name="act_absen_persentase">Persentage:</string>
    <string name="detail_absen_title">Attendance Details</string>
    <string name="detail_absen_detail_pertemuan">Meeting:</string>
    <string name="detail_absen_label_status">Status:</string>
    <string name="detail_absen_tahun">Year</string>
    <string name="detail_absen_semester">Semester</string>
    <string name="detail_absen_kelas">Class</string>
    <string name="detail_absen_dosen">Lecture</string>
    <string name="detail_absen_gak_ada">Attendance details not available</string>
    <string name="detail_absen_chart">Attendance Graph</string>

    <!--activity ganti password-->
    <string name="act_ganti_password_header">Change Password</string>
    <string name="act_ganti_password_current">Current password</string>
    <string name="act_ganti_password_new">New password</string>
    <string name="act_ganti_password_confirm">Retype new password</string>
    <string name="act_ganti_password_ganti">Change</string>
    <string name="act_ganti_password_fail">Failed to update password</string>
    <string name="act_ganti_password_success">Password has successfully changed, try to relogin with your new password</string>

    <!--activity bio-->
    <string name="bio_label_tempat_lahir">Birth Place</string>
    <string name="bio_label_tanggal_lahir">Birth Date</string>
    <string name="bio_label_status">Status</string>
    <string name="bio_label_jenis_kelamin">Sex</string>
    <string name="bio_label_telepon">Phone</string>
    <string name="bio_label_telepon_ortu">Parents Phone</string>
    <string name="bio_label_email">E-mail</string>
    <string name="bio_label_alamat">Address</string>
    <string name="bio_label_semester">Semester</string>
    <string name="bio_label_kelas_primer">Primary Class</string>
    <string name="bio_label_kelas_sekunder">Secondary Class</string>
    <string name="bio_label_dosen_wali">Advisor</string>
    <string name="bio_label_ipk">GPA</string>
    
    <!--activity edit bio-->
    <string name="bio_edit_header">Bio Edit</string>
    <string name="error_bind_data">No data to send</string>
    <string name="bio_edit_berhasil">Bio has successfully updated</string>
    <string name="bio_edit_gagal">Failed to update bio</string>
    <string name="bio_edit_update_loading">Updating..</string>
    <string name="bio_edit_nama">Name</string>
    <string name="bio_edit_tempat">Origin</string>
    <string name="bio_edit_tanggal">Birth date, yyyy-mm-dd</string>
    <string name="bio_edit_required">All forms are required</string>

    <!--approval BAP-->
    <string name="bap_detail_hari_tanggal">Day and Date</string>
    <string name="bap_detail_pertemuan">Meeting</string>
    <string name="bap_detail_gagal_approve">Failed to approve BAP</string>
    <string name="bap_detail_sukses_approve">BAP successfully approved</string>
    <string name="bap_detail_pesan">BAP approve at meeting: </string>
    <string name="bap_detail_aprove_dialog_title">Approve</string>
    <string name="bap_detail_aprove_sudah">Meeting </string>
    <string name="bap_detail_aprove_sudah_end"> already approved</string>

    <!--notification-->
    <string name="notif_title">Task Notification</string>
    <string name="notif_content">Task available</string>
    <string name="notif_thicker">Notification!</string>
</resources>
