<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@color/app_background">

    <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/mnBio"
            android:id="@+id/menuBiodata"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_menu_button_biodata"
            android:textColor="@color/text_color"
            android:layout_marginTop="6dp"
            android:textSize="30sp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_bio"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/mnJadwalKuliah"
            android:id="@+id/menuJadwal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_menu_button_jadwal"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:drawableLeft="@drawable/ic_jadwal"
            android:paddingLeft="10dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/mnAbsen"
            android:id="@+id/menuAbsensi"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:textSize="30sp"
            android:textColor="@color/text_color"
            android:background="@drawable/custom_menu_button_absen"
            android:drawableLeft="@drawable/ic_absen"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/mnNilaiMentah"
            android:id="@+id/menuNilai"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:textSize="30sp"
            android:textColor="@color/text_color"
            android:background="@drawable/custom_menu_button_nilai"
            android:drawableLeft="@drawable/ic_nilai"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/mnTugas"
            android:id="@+id/menuTugas"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/custom_menu_button_tugas"
            android:drawableLeft="@drawable/ic_tugas"
            android:textSize="30sp"
            android:textColor="@color/text_color"/>
</LinearLayout>