<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_background"
                android:padding="10dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/card_background_normal"
            android:padding="4dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bio_edit_header"
                android:id="@+id/bioJudulEdit"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000" android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/bioEditNama"
                android:layout_gravity="center_horizontal"
                android:hint="@string/bio_edit_nama"
                android:background="@drawable/edit_text_top"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/bioEditAsal"
                android:layout_gravity="center_horizontal"
                android:hint="@string/bio_edit_tempat"
                android:background="@drawable/edit_text_mid"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:ems="10"
                android:id="@+id/bioEditTanggal"
                android:layout_gravity="center_horizontal"
                android:hint="@string/bio_edit_tanggal"
                android:background="@drawable/edit_text_bottom"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/act_ganti_password_ganti"
                android:id="@+id/bioEditButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/custom_button_edit_bio"
                android:textColor="@color/text_color"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"/>
    </LinearLayout>
</RelativeLayout>