<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/app_background"
                android:padding="10dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/card_background_normal"
            android:padding="4dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/act_ganti_password_header"
                android:id="@+id/pwdLabel"
                android:layout_gravity="center_horizontal"
                android:textColor="#ff000000"
                android:layout_marginTop="8dp"/>
        <EditText
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pwdBaru"
                android:layout_gravity="center_horizontal"
                android:hint="@string/act_ganti_password_new"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/edit_text_top" android:layout_marginTop="10dp"/>
        <EditText
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pwdUlang"
                android:layout_gravity="center_horizontal"
                android:hint="@string/act_ganti_password_confirm"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/edit_text_bottom"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/act_ganti_password_ganti"
                android:id="@+id/btPwdGanti"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_button_change" android:textColor="@color/text_color"
                android:layout_marginLeft="8dp" android:layout_marginRight="8dp"/>
    </LinearLayout>
</RelativeLayout>