<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_background">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background_normal"
            android:layout_margin="15dp">
        <ImageView
                android:layout_width="60dp"
                android:layout_height="65dp"
                android:id="@+id/bioFoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="2dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/bioNama"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/bioFoto"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="-"
                android:id="@+id/bioNim"
                android:layout_centerVertical="true"
                android:layout_below="@+id/bioNama"
                android:layout_alignLeft="@+id/bioNama"
                android:layout_alignStart="@+id/bioNama"/>
    </RelativeLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/card_background_normal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mnBio"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:focusable="false"
                android:background="@color/nilai_detail"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView"
                android:layout_gravity="center_horizontal">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_tempat_lahir"
                        android:id="@+id/bioLtempatLahir"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioTempatLahir"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_status"
                        android:id="@+id/bioLstatus"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioStatus"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_jenis_kelamin"
                        android:id="@+id/bioLkelamin"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioJenisKelamin"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_telepon"
                        android:id="@+id/bioLtelp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioNoTelp"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_telepon_ortu"
                        android:id="@+id/bioLortuTelp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioNoTelpOrtu"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_email"
                        android:id="@+id/bioLemail"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioEmail"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_alamat"
                        android:id="@+id/bioLalamat"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioAlamat"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_semester"
                        android:id="@+id/bioLsemester"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioSemester"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_kelas_primer"
                        android:id="@+id/bioLprimer"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioPrimary"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_kelas_sekunder"
                        android:id="@+id/bioLsekunder"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioSekunder"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_dosen_wali"
                        android:id="@+id/bioLdosenWali"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioDosenWali"
                        android:layout_marginLeft="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_label_ipk"
                        android:id="@+id/bioLipk"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:id="@+id/bioIpk"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>