<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:background="@drawable/card_background_normal">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="[Nama mata kuliah]"
            android:id="@+id/tvTugasIndNama" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tugas_label_tugas"
            android:id="@+id/tvTgslbNama" android:layout_below="@+id/tvTugasIndNama" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="3dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tugas_label_deadline"
            android:id="@+id/tvTgslbDeadline" android:layout_below="@+id/tvTgslbNama" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="3dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=": [nama tugas]"
            android:id="@+id/tvTugasIndiv" android:layout_below="@+id/tvTugasIndNama" android:layout_toRightOf="@+id/tvTgslbNama"
            android:layout_marginLeft="10dp" android:layout_marginTop="3dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=": [deadline]"
            android:id="@+id/tvDeadIndiv" android:layout_below="@+id/tvTugasIndiv" android:layout_alignLeft="@+id/tvTugasIndiv"
            android:layout_alignStart="@+id/tvTugasIndiv" android:layout_marginTop="3dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tugas_label_waktu"
            android:id="@+id/tvTgslbTime" android:layout_below="@+id/tvTgslbDeadline" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="3dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=": [time]"
            android:id="@+id/tvTimeIndiv"
            android:layout_alignTop="@+id/tvTgslbTime" android:layout_alignLeft="@+id/tvDeadIndiv"
            android:layout_alignStart="@+id/tvDeadIndiv"/>
</RelativeLayout>